# sintl

./: CMakeLists.txt  README.md
config/: CMakeLists.txt
gettext/: CMakeLists.txt  gettext.c
include/: CMakeLists.txt  libintl.h  libsintl_config.h
libsintl/: CMakeLists.txt  _loc_path.h  catgets.c  catopen.c  gettext.c  gettext.h  gettext_gnu.c  gettext_real.c  gettext_util.c  nl_types.h  nlspath_checks.c  nlspath_checks.h  plural_parser.c
man/: CMakeLists.txt
msgfmt/: CMakeLists.txt  gnu_handle.c  gnu_hash.c  gnu_lex.c  gnu_msgfmt.h  gnu_msgs.c  gnu_msgs_rev.c  gnu_prime.h  msgfmt.c  sun_msgfmt.h  xgettext.c
test_resources/: duplicate_msgids_plural.po  duplicate_msgids_singular.po  messages.mo  multi_domain_plural.po  simple_plural.po  simple_plural_with_cformat.po  simple_plural_with_fuzzy.po  simple_plural_with_incorrect_cformat.po  singular_only_po.po
xgettext/: CMakeLists.txt  xgettext.c
